# Snake

./: .gitignore  CMakeLists.txt  README.md
include/: colors.h  food.h  game.h  settings.h  snake.h  snake_textures.h  utils.h
src/: food.cpp  game.cpp  main.cpp  snake.cpp  snake_textures.cpp  utils.cpp
